--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,7 @@
     "plugins": ["@typescript-eslint"],
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
     "rules": {
-        "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/no-unused-vars": 0,
         "@typescript-eslint/consistent-type-definitions": ["error", "type"]
     },
     "env": {
