--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
     "strict": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+  "exclude": ["node_modules"],
+  "strict": true,
+  "noUnusedLocals": true,
+  "noUnusedParameters": true,
 }
