--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "tsc --project tsconfig.build.json",
     "format": "prettier --write \"src/**/*.{ts,js}\"",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
-    "test": "jest --config jestconfig.json"
+    "test": "jest --config jest.config.json",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "postversion": "npm run format"
   },
   "repository": {
     "type": "git",
@@ -34,6 +38,7 @@
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.34.0",
     "jest": "^29.4.2",
+    "jest-junit": "^15.0.0",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
