--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,11 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  publish:
+  if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'release/')
+  runs-on: ubuntu-latest
+  environment: Production
+  steps:
+    publish:
     - name: Checkout
       uses: actions/checkout@v3
 
