fix: try a manual version commit

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,12 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Commit Changes
-        uses: stefanzweifel/git-auto-commit-action@v4
+        run: |
+          git config --global user.name 'GH Release Action'
+          git config --global user.email 'gh-release-action@mytiki'
+          git add package.json
+          git commit -m "${{ steps.semver.outputs.nextStrict }}"
+          git push origin main
 
       - name: Tag & Release
         uses: ncipollo/release-action@v1
